--- a/src/Pages/SingleProductPage/SingleProductPage.css
+++ b/src/Pages/SingleProductPage/SingleProductPage.css
@@ -70,6 +70,7 @@
 .product-page .details .size-btns {
     margin: 0.6rem 0rem;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 1rem;
 }
