--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* ------- footer ----  */
 footer{
-    margin-top: 5rem;    
+    /* margin-top: 5rem;     */
     /* background: #f3f3f3; */
     padding: 1rem 5rem;
     border-top: 1px solid #b9b7b7;
@@ -136,20 +136,73 @@ footer .copyright a{
 .side-icons .sin a:hover::after{
     right: 200%;
 }
+@media only screen and (max-width: 500px){
+    .side-icons .sin{
+        display: none;
+    }
+}
 
 
 
 
 
+/* ------ upper-foot   ----  */
+.upper-foot{
+    border-top: 1px solid var(--color-main);
+    padding-top: 1rem;
+}
+.upper-foot h5{
+    color: var(--color-main);
+    text-transform: uppercase;
+}
+.upper-foot .imgs{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1rem;
+}
+.upper-foot .imgs img{
+    height: 70px;
+    width: auto;
+    object-fit: contain;
+}
+.upper-foot .end .imgs{
+    justify-content: end;
+}
+.upper-foot .end .imgs img{
+    height: 50px;
+}
+.upper-foot .end h5{
+    text-align: end;
+}
 
 
 
 
+/* Media Querry ---  */
+@media only screen and (max-width: 768px) {
+    .upper-foot .end{
+        margin-top: 1rem;
+    }
+    .upper-foot .end .imgs{
+        justify-content: start;
+    }
+    .upper-foot .end .imgs img{
+        height: 50px;
+    }
+    .upper-foot .end h5{
+        text-align: start;
+    }
+}
 
-
-
-
-
+@media only screen and (max-width: 500px){
+    .upper-foot .imgs img {
+        height: 3rem;
+    }
+    .upper-foot .end .imgs img {
+        height: 40px;
+    }
+}
 
 
 
