--- a/src/components/CategoryPro/CategoryPro.css
+++ b/src/components/CategoryPro/CategoryPro.css
@@ -10,7 +10,7 @@
 }
 .sin-cate .img img{
     border-radius: 50%;
-    border: 1px dashed var(--color-black-light);
+    border: 4px solid var(--color-main);
     object-fit: contain;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
